--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,9 +6,7 @@ run:
   modules-download-mode: readonly
 
 output:
-  formats:
-    - format: colored-line-number
-      path: stdout
+  format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
 
