--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,8 @@ jobs:
       run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
       
     - name: Run gosec security scanner
-      run: gosec -fmt sarif -out gosec-results.sarif ./...
+      run: gosec -fmt text ./...
       continue-on-error: true
-      
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: gosec-results.sarif
 
   # Code quality and linting
   lint:
@@ -83,7 +77,7 @@ jobs:
     name: Unit Tests
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         go-version: ['1.21', '1.22', '1.23']
     runs-on: ${{ matrix.os }}
     steps:
@@ -120,7 +114,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.22'
       uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.out
+        files: ./coverage.out
         flags: unittests
         name: codecov-umbrella
 
