--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23.10'
         
     - name: Install govulncheck
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
@@ -42,7 +42,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23.10'
         
     - name: Install golangci-lint
       uses: golangci/golangci-lint-action@v8
@@ -78,7 +78,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        go-version: ['1.21', '1.22', '1.23']
+        go-version: ['1.23.10']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v5
@@ -111,7 +111,7 @@ jobs:
       run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
       
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.22'
+      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.23.10'
       uses: codecov/codecov-action@v5
       with:
         files: ./coverage.out
@@ -132,7 +132,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23.10'
         
     - name: Build
       env:
@@ -155,7 +155,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.23.10'
         
     - name: Run example tests
       run: go test -v -run Example
